Prevent wrapping of links in resume header

--- a/src/resume/styles.css
+++ b/src/resume/styles.css
@@ -124,6 +124,10 @@ body > nav {
           "github";
       }
 
+      a {
+        text-wrap: nowrap;
+      }
+
       .email {
         grid-area: email;
       }
